--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "await-to-js": "^3.0.0",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "ts-pattern": "^3.3.5",
+    "typescript": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
